// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Item renders correctly 1`] = `
<div
  className=
      ms-Card
      {
        box-shadow: 0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108);
        max-width: 250px;
        min-width: 200px;
        padding-bottom: 12px;
        padding-left: 12px;
        padding-right: 12px;
        padding-top: 12px;
        transition: box-shadow 0.5s ease;
      }
>
  <div
    className=
        ms-Stack
        ms-Card-stack
        {
          align-items: space-between;
          box-sizing: border-box;
          display: flex;
          flex-direction: column;
          flex-wrap: nowrap;
          height: 100%;
          justify-content: space-between;
          width: auto;
        }
        & > * {
          text-overflow: ellipsis;
        }
        & > *:not(:first-child) {
          margin-top: 12px;
        }
        & > *:not(.ms-StackItem) {
          flex-shrink: 1;
        }
  >
    <div
      className=
          ms-StackItem
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            flex-shrink: 1;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            height: auto;
            width: auto;
          }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Card Item renders correctly when having tokens passed to it 1`] = `
<div
  className=
      ms-Card
      {
        box-shadow: 0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108);
        max-width: 250px;
        min-width: 200px;
        padding-bottom: 12px;
        padding-left: 12px;
        padding-right: 12px;
        padding-top: 12px;
        transition: box-shadow 0.5s ease;
      }
>
  <div
    className=
        ms-Stack
        ms-Card-stack
        {
          align-items: space-between;
          box-sizing: border-box;
          display: flex;
          flex-direction: column;
          flex-wrap: nowrap;
          height: 100%;
          justify-content: space-between;
          width: auto;
        }
        & > * {
          text-overflow: ellipsis;
        }
        & > *:not(:first-child) {
          margin-top: 12px;
        }
        & > *:not(.ms-StackItem) {
          flex-shrink: 1;
        }
  >
    <div
      className=
          ms-StackItem
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            flex-shrink: 1;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            height: auto;
            margin-bottom: 12px;
            margin-left: 8px;
            margin-right: 8px;
            margin-top: 12px;
            width: auto;
          }
    >
      <div />
    </div>
  </div>
</div>
`;
